--- a/assets/package.json
+++ b/assets/package.json
@@ -22,7 +22,10 @@
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.9",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass-loader": "^11.0.1",
+    "sass-mq": "^5.0.1",
     "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.24.3",
