--- a/assets/package.json
+++ b/assets/package.json
@@ -28,6 +28,7 @@
     "@wordpress/i18n": "^3.16.0",
     "@wordpress/icons": "^2.7.0",
     "@wordpress/server-side-render": "^1.18.0",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
@@ -38,6 +39,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-loader": "^5.2.0",
     "sass-loader": "^11.0.1",
     "sass-mq": "^5.0.1",
     "style-loader": "^2.0.0",
@@ -47,5 +49,18 @@
   },
   "dependencies": {
     "reset-css": "^5.0.1"
-  }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie < 11",
+    "last 2 versions",
+    "> 1%",
+    "iOS 7",
+    "last 3 iOS versions"
+  ]
 }
