--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -17,5 +17,8 @@
         }
       ],
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import"
     ]
   }
