--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@wordpress/base-styles": "^3.1.0",
     "@wordpress/block-editor": "^5.0.0",
     "@wordpress/blocks": "^6.23.0",
